--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--Metas http-->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta http-equiv="refresh" content="30">
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="cache-control" content="no-cache">
+        <meta http-equiv="pragma" content="no-cache" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- Metas name-->
         <meta name="keywords" content="Brayan, portfolio, Brayan portfolio, Brayan Torres, Brayan Torres portfolio, full stack web development">
         <meta name="description" content="Welcome to the Brayan's website, this is a little portfolio that introduces myself and 
         all my works,studies and personal career in computer science" />
         <meta name="author" content="Brayan Torres, email: btorres@fi.uba.ar">
         <meta name="language" content="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="robots" content="index,follow" />
+        <meta name="robots" content="index,follow, noindex, nofollow, none" />
         <meta name="googlebot" content="noimagesindex" />
+        <!-- external links-->
+        
+
 
 
         <title>
             Brayan's portfolio
         </title>
     </head>
-    <body>
 
+    <body>
+        
     </body>
 </html>
