--- a/education.html
+++ b/education.html
@@ -115,7 +115,7 @@
     
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Skills</a>
+                        <a class="nav-link" href="skills.html">My Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Work</a>
