--- a/skills.html
+++ b/skills.html
@@ -95,7 +95,7 @@
                         <a class="nav-link" href="skills.html">My Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Work</a>
+                        <a class="nav-link" href="work.html">Works</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
