--- a/education.html
+++ b/education.html
@@ -121,7 +121,7 @@
                         <a class="nav-link" href="work.html">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <a href="https://twitter.com/Brayanjtorres" target="_blank">
