--- a/work.html
+++ b/work.html
@@ -32,6 +32,7 @@
 
     <!-- external scripts js -->
     <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/js/webprg.jsdelivr.js"></script>
 
 
     <!-- Header img-->
