--- a/skills.html
+++ b/skills.html
@@ -31,6 +31,7 @@
 
     <!-- external scripts js -->
     <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/js/webprg.jsdelivr.js"></script>
 
 
     <!-- Header img-->
