js edit scripts

--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
         <div class="container">
             <h1 class="h1 generalfont"><mark class="mark">C</mark>ontact</h1>
             <article>
-                <p>I'm interested in freelance opportunities or Fulltime work in Tecnology Industry.<br> However, if you have other
-                request or question, don't hesitate to use the form.</p>
+                <p>I'm interested in freelance opportunities or Full Time work in Technology Industry.<br> However, if you have other request
+                or question, don't hesitate to use the form.</p>
 
             </article>
 
