skills edit part1 English verion

--- a/education.html
+++ b/education.html
@@ -32,7 +32,7 @@
     
     <!-- Header img-->
     <header class="card-img-overlay">
-        <img src="img/torreslogo2.PNG" width="180" height="130" id="fullstack" alt="full stack developer">
+        <img src="img/torreslogo.PNG" width="200" height="150" id="fullstack" alt="full stack developer">
     </header>
     
     <!-- section education-->
