traslate work page and add atribute defer

--- a/skills.html
+++ b/skills.html
@@ -119,7 +119,7 @@
     </nav>
 
     <!-- external scripts js -->
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="/libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
 </body>
 </html>
