--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
                             <li>
                                 Compunet C.A, Venezuela, 2013-2017
                                 <ul>
-                                    <li>Soporte IT, Soporte y Mantenimiento de hardware y software</li>
+                                    <li>Support IT, Maintenance on hardware and software</li>
 
                                 </ul>
                                     
@@ -66,12 +66,11 @@
                     <article>
                         <ul>
                             <li>
-                                Proyecto FIUBA, Algoritmos y Programacion I, Argentina, 2021
+                                Project FIUBA, Algorithms and Programming I, Argentina, 2021
                                 <ul>
                                     <li>
-                                        Creacion de un video juego en el lenguaje de programacion 
-                                        Python. Herramientas: Tkinter, Python, Estructura de datos, Algoritmos
-                                        de Ordenamiento.  
+                                        I made a game with programming language python, Tools:
+                                        Tkinter, Python, Data Structure, Algorithms by order.  
                                         
                                     </li>
                                 </ul>
@@ -146,8 +145,8 @@
     </nav>
 
     <!-- external scripts js -->
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="/libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
 
 </body>
 </html>
