--- a/education.html
+++ b/education.html
@@ -147,8 +147,8 @@
     </nav>
 
     <!-- external scripts js -->
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="/libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
     
 </body>
 </html>
