--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     
     
     <!-- external scripts js -->
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="/libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
 
 </body>
 
