--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                         </svg>
         
-                        <p id="text-aboutme">I'm a student of Computer Engineering at University of Buenos Aires -
+                        <p class="text-aboutme">I'm a student of Computer Engineering at University of Buenos Aires -
                             Argentina.<br>
                             I have been working with some programming language like Python, JavaScript, TypeScript, C and
                             Java.<br>
