final changes preview to javascript final

--- a/education.html
+++ b/education.html
@@ -86,7 +86,7 @@
             </div>
     
         </nav>
-        <!-- Section about me-->
+        <!-- Section education-->
         <div class="container">
             <div class="row">
                 <div class="col-6 col-md-6">
