--- a/skills.html
+++ b/skills.html
@@ -87,7 +87,7 @@
             </div>
     
         </nav>
-        <!-- section about me-->
+        <!-- section skills-->
         <div class="container">
             <div class="row">
                 <div class="col-6 col-md-6">
@@ -121,7 +121,8 @@
                         
                         <p class="text-aboutme">
                             My main experience on technologies in industry are: 
-                            <br>HTML,CSS,JS,TypeScript,Angular,Python,C,MySQL,GIT,GITHUB.
+                            <br>HTML,CSS,JS,TypeScript,Angular.
+                            <br>Python,C,MySQL,GIT,GITHUB.
                         </p>
 
                     </div>
